2009-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): The mechanism for flagging "lc variable"
	was not being triggered for plot types VECTOR, CIRCLES, BOXES.
	Bug fix

2009-10-22  David Marx  <itsdmarx@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp:  _T() macro has been deprecated in favor
	of wxT().
	Bug #2883574

2009-10-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c: Initialize each new surface in a 3d dataset directly
	from the first surface.
	Bug #2876167

2009-10-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (test_term):  Add a few items to the test page output if
	the current terminal supports them:  enhanced text, transparency.

2009-10-10  Jost Brachert  <jotyc@users.sourceforge.net>

	* src/datafile.c (plot_option_index) docs/gnuplot.doc:
	Allow a blank trailing index spec to indicate "until end of file".

2009-10-10  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/tabulate.c:  Fix tabular output of log scale data.
	Bug #2849166

2009-10-09  Thomas Sefzick <thse@users.sourceforge.net>

	* term/latex.trm:  Add an option for rotated text in the old latex
	terminal.  'set term latex rotate' enables it and turns off the 
	previous 'stacked' y-label mechanism.

2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* FAQ.pdf Makefile.am docs/gnuplot.doc configure.in:
	Replace outdated FAQ with current FAQ.pdf.  Update version numbers.

	* src/plot.c src/show.c src/syscfg.h src/version.c src/version.h:
	More concise contact info on splash page.

	* src/graph3d.c (do_3dplot): Explicit 'set xyplane at <z-value>' should
	be honored even if the x and y tics are turned off.
	Bugfix

	* src/graph3d.c (plot3drequest): Fixes spurious error from old tics,
	e.g.  "set ytics ("Bug" 0); unset ytics; set ytics; splot x*y"

2009-10-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/term.c (term_start_multiplot): Accept an explicit font for
	the multiplot title.
